@@ -114,16 +114,16 @@
 #define API_RET_TYPE NET_API_STATUS
 #define NET_API_FUNCTION WINAPI
 
+#ifndef _NO_W32_PSEUDO_MODIFIERS
 #ifndef IN
 #define IN
 #endif
-
+#ifndef OUT
+#define OUT
+#endif
 #ifndef OPTIONAL
 #define OPTIONAL
 #endif
-
-#ifndef OUT
-#define OUT
 #endif
 
 #define PLATFORM_ID_DOS 300
